# rust-kext

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h  x86_64-apple-darwin-kext.json
.cargo/: config
kext_macros/: Cargo.toml
kext_macros/src/: lib.rs
sample.kext/Contents/: Info.plist
src/: alloc.rs  c_types.rs  kernel.rs  kext.rs  lib.rs
